# crypt_guard_cli

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: codeql.yml  rust.yml
src/: keychain.rs  load_key.rs  main.rs  utils.rs
