[package]
name = "crypt-guard"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypt_guard = { version = "1.0.2", features = ["full"] }
dirs = "^5.0.1"
tokio = { version = "^1.36.0", features = ["full"] }
aes = "^0.8.3"
clap = { version = "^4.4.18", features = ["cargo", "derive"] }
env = "^0.0.0"
hex = "^0.4.3"
hmac = "^0.12.1"
pqcrypto = { version = "^0.17.0", features = ["serialization"] }
pqcrypto-kyber = { version = "^0.8.0", features = ["serialization"] }
pqcrypto-traits = "^0.3.5"
sha2 = "^0.10.8"
tempdir = "^0.3.7"
tempfile = "^3.9.0"
pqcrypto-falcon = "0.3.0"
pqcrypto-dilithium = "0.5.0"
crypt_guard_sign = { version = "0.1.1", features = ["dilithium"] }
crypt_guard_kyber = { version = "0.1.1", features = ["xchacha20"] }
